Updated the about section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="info">
                     <div class="infoLeft">
                         <div class="leftTop">
-                            <p style="color: white;">I provide creative solutions to turn your Ideas into digital reality</p>
+                            <p style="color: white;">I provide creative solutions to turn your Ideas into digital reality.</p>
                         </div>
                         <div class="leftBottom">
                             <p>Reach out to me</p>
